# portapotty

./: .gitignore  .gitmodules  README.md  deploy.sh  portapotty.sh  pottyfunctions.sh
alacritty/: hooks.sh
alacritty/config/: alacritty.yml
applications/: hooks.sh
base/emacs/: hooks.sh  packages.yml
base/neovim/: hooks.sh
base/node/: hooks.sh
base/python/: packages.yml
base/vim/: hooks.sh  packages.yml
base/zsh/: hooks.sh  packages.yml
bash/: hooks.sh
bash/dotfiles/: aliases.sh  bashrc  bashrc.sh  defaults.sh  magic-spells.sh  prompt.sh
cmus/: hooks.sh  hooks.yml  packages.yml
conky/: hooks.sh  packages.yml
conky/config/: conky.conf
emacs/: hooks.sh  packages.yml
fonts/: hooks.sh  packages.yml
fzf/: hooks.sh
glfw-provisioning/: CMakeLists.txt  install-glfw3.sh
gui-apps/: hooks.sh
kde/: hooks.sh
keybinds/: hooks.sh  packages.yml  xbindkeysrc
kitty/: hooks.sh  packages.yml
konsole/: hooks.sh
misc/: hooks.sh
neovim/: hooks.sh  packages.yml
node/: hooks.sh
openbox/: hooks.sh
opensuse/: hooks.sh
python/: hooks.sh  packages.sh  packages.yml
qterminal/: hooks.sh
rofi/: hooks.sh  packages.yml
scripts/: hooks.sh  packages.yml
setup/: apt-packages.sh  hooks.sh  packages.sh  packages.yml
shell/: hooks.sh
shttr/: hooks.sh  packages.yml
ssh/: hooks.sh
syncthing/: hooks.sh
tmux/: hooks.sh  packages.yml
vagrant/: hooks.sh
vim/: apt-packages.sh  flags  hooks.sh  packages.yml
xbindkeys/: hooks.sh  packages.yml
yaml-packages/: packages-sample.yml  packages.yml  parser.sh
zsh/: .zshrc  hooks.sh  packages.yml
(+149 files in other folders)
